Create users and list users & swagger bug fixes
